--- a/portfolio.html
+++ b/portfolio.html
@@ -57,172 +57,172 @@
     <!--nav-portfolio-->
 
     <main>
-      <section class="section-portfolio">
+      <section class="portfolio">
         <h1 class="visually-hidden">Кнопки</h1>
-        <div class="container container-hero-portfolio">
-          <ul class="list portfolio-list">
-            <li class="hero-portfolio-item">
-              <button type="button" class="portfolio-btn portfolio-btn-active">Все</button>
+        <div class="container portfolio__about">
+          <ul class="list portfolio__list">
+            <li class="portfolio__item">
+              <button type="button" class="portfolio-btn portfolio-btn__active">Все</button>
             </li>
-            <li class="hero-portfolio-item">
+            <li class="portfolio__item">
               <button type="button" class="portfolio-btn">Веб-сайты</button>
             </li>
-            <li class="hero-portfolio-item">
+            <li class="portfolio__item">
               <button type="button" class="portfolio-btn">Приложения</button>
             </li>
-            <li class="hero-portfolio-item">
+            <li class="portfolio__item">
               <button type="button" class="portfolio-btn">Дизайн</button>
             </li>
-            <li class="hero-portfolio-item">
+            <li class="portfolio__item">
               <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
 
           <!--Герой-->
-          <ul class="list hero-portfolio-list">
-            <li class="li-portfolio-item">
-               <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+          <ul class="list hero-portfolio__list">
+            <li class="hero-portfolio__item">
+               <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/website.jpg"
                   alt="Веб-сайт-Технокряк"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Технокряк</h2>
-                  <p class="hero-portfolio-lead">Веб-сайт</p>
+<p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                    <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle poster-hero">Технокряк</h2>
+                  <p class="portfolio-about__lead">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-               <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow">
+            <li class="hero-portfolio__item">
+               <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link">
                 <img
                   class="poster"
                   src="./images/img-portfolio/design.jpg"
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
                 />
-                 <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Постер New Orlean vs Golden Star</h2>
-                  <p class="hero-portfolio-lead">Дизайн</p>
+                 <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-about__lead">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/application.jpg"
                   alt="Ресторан Seafood"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Ресторан Seafood</h2>
-                  <p class="hero-portfolio-lead">Приложение</p>
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle">Ресторан Seafood</h2>
+                  <p class="portfolio-about__lead">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/marketing.jpg"
                   alt="Проект Prime"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Проект Prime</h2>
-                  <p class="hero-portfolio-lead">Маркетинг</p>
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                <h2 class="portfolio-about__subtitle">Проект Prime</h2>
+                  <p class="portfolio-about__lead">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/application-2.jpg"
                   alt="Проект Boxes"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Проект Boxes</h2>
-                  <p class="hero-portfolio-lead">Приложение</p>
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle">Проект Boxes</h2>
+                  <p class="portfolio-about__lead">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/website-2.jpg"
                   alt="Inspiration has no Borders"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero" lang="en">
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle" lang="en">
                     Inspiration has no Borders
                   </h2>
-                  <p class="hero-portfolio-lead">Веб-сайт</p>
+                  <p class="portfolio-about__lead">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/design-2.jpg"
                   alt="Издание Limited Edition"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Издание Limited Edition</h2>
-                  <p class="hero-portfolio-lead">Дизайн</p>
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle">Издание Limited Edition</h2>
+                  <p class="portfolio-about__lead">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/marketing-2.jpg"
                   alt="Проект LAB"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero">Проект LAB</h2>
-                  <p class="hero-portfolio-lead">Маркетинг</p>
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle">Проект LAB</h2>
+                  <p class="portfolio-about__lead">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="li-portfolio-item">
-              <div class="hero-port-animation">
-              <a href="#" class="portfolio-shadow"
+            <li class="hero-portfolio__item">
+              <div class="hero-portfolio__img">
+              <a href="#" class="hero-portfolio__link"
                 ><img
                   class="poster"
                   src="./images/img-portfolio/application-3.jpg"
                   alt="Growing Business"
                   width="370"
                 />
-                <p class="port-animation-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
-                <div class="container-port-div">
-                  <h2 class="portfolio-subtitle poster-hero" lang="en">Growing Business</h2>
-                  <p class="hero-portfolio-lead">Приложение</p>
+                <p class="hero-portfolio__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
+                <div class="portfolio__about">
+                  <h2 class="portfolio-about__subtitle" lang="en">Growing Business</h2>
+                  <p class="portfolio-about__lead">Приложение</p>
                 </div>
               </a>
             </li>
